Aplicando eventos na porta

--- a/styles/Porta.module.css
+++ b/styles/Porta.module.css
@@ -15,6 +15,7 @@
     border-top: 7px solid brown;
     border-right: 7px solid brown;
     width: 90%;
+    background-color: #0005;
 }
 
 .porta {
